<resources>
    <string name="app_name">Careerpath</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="email2">Email</string>
    <string name="password">Password</string>
    <string name="password2">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">LOGIN</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="you_don_t_have_an_account_yet">You don’t have an account yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="_25_minute_ago">25 minute ago</string>
    <string name="_15k_mo">$15K/Mo</string>
    <string name="hello_nmuhammad_hadya_alleredha">Hello\nMuhammad Hadya Alleredha.</string>
    <string name="find_your_job_nbuild_your_future">Find Your Job\nBuild Your Future.</string>
    <string name="join_now">Join Now</string>
    <string name="find_your_job">Find Your Job</string>
    <string name="_100k">100k</string>
    <string name="remote_job">Remote Job</string>
    <string name="_50k">50k</string>
    <string name="full_time">Full Time</string>
    <string name="_25_5k">25,5k</string>
    <string name="part_time">Part Time</string>
    <string name="recent_job_list">Recent Job List</string>
    <string name="google_inc_california_usa">Google Inc · California, USA</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="design">Design</string>
    <string name="full_time2">Full time</string>
    <string name="senior_designer">Senior designer</string>
    <string name="filter">filter</string>
    <string name="google_california_usa">Google, California, USA</string>
    <string name="ui_ux_designer2">UI/UX Designer</string>
    <string name="full_time3">Full-time</string>
    <string name="designer">Designer</string>
    <string name="senior_designer2">Senior designer</string>
    <string name="design2">Design</string>
    <string name="design3">Design</string>
    <string name="california_usa">California, USA</string>
    <string name="senior_designer3">Senior designer</string>
    <string name="designer4">Designer</string>
    <string name="full_time4">Full-time</string>
    <string name="ui_ux_designer3">UI/UX Designer</string>
    <string name="google_inc_california_usa4">Google inc · California, USA</string>
    <string name="design4">Design</string>
    <string name="full_time5">Full time</string>
    <string name="mo">/Mo</string>
    <string name="_15k">$15K</string>
    <string name="_25_minute_ago2">25 minute ago</string>
    <string name="senior_designer4">Senior designer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="specialization">Specialization</string>
    <string name="design5">Design</string>
    <string name="_140_jobs">140 Jobs</string>
    <string name="finance">Finance</string>
    <string name="_250_jobs">250 Jobs</string>
    <string name="health">Health</string>
    <string name="_235_jobs">235 Jobs</string>
    <string name="_412_jobs">412 Jobs</string>
    <string name="programmer">Programmer</string>
    <string name="education">Education</string>
    <string name="_120_jobs">120 Jobs</string>
    <string name="_86_jobs">86 Jobs</string>
    <string name="restaurant">Restaurant</string>
    <string name="mo2">/mo</string>
    <string name="_15k2">$15k</string>
    <string name="_25_minutes_ago">25 minutes ago</string>
    <string name="senior_designer5">Senior Designer</string>
    <string name="full_time6">Full Time</string>
    <string name="profile_header_bg">Profile Header Background</string>
    <string name="share">Share</string>
    <string name="setting">Settings</string>
</resources>