<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:orientation="vertical"
        android:padding="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome_back" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#8E98A7"
                android:textSize="14sp"
                android:layout_marginBottom="4dp"/>
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/email2"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                android:inputType="textEmailAddress"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#8E98A7"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password2"
                    android:background="@drawable/rounded_edittext"
                    android:padding="12dp"
                    android:inputType="textPassword"/>

                <ImageView
                    android:id="@+id/iv_show_pass"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:src="@drawable/ic_eye" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical">


            <CheckBox
                android:id="@+id/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textColor="#8E98A7"
                android:textSize="14sp"/>
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="#8E98A7"
                android:textSize="14sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:background="@drawable/bg_login_button"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:stateListAnimator="@null"/>

        <include
            layout="@layout/item_google_button">
        </include>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_don_t_have_an_account_yet"
                android:textColor="#8E98A7"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="#FFA500"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>